[gd_scene load_steps=7 format=3 uid="uid://dva6an46ov0oy"]

[ext_resource type="Script" path="res://src/ui/spell_ui/spell_ui.gd" id="1_uvawi"]
[ext_resource type="Texture2D" uid="uid://klywda7vhx06" path="res://assets/ui/lef panel.png" id="2_00xkd"]
[ext_resource type="Texture2D" uid="uid://bpx12m7d1tt0q" path="res://assets/ui/altar.png" id="3_px7ni"]
[ext_resource type="Texture2D" uid="uid://c3ydalaynuwlg" path="res://assets/ui/right panel.png" id="3_rvh61"]
[ext_resource type="FontFile" uid="uid://b21yg3y2byt8f" path="res://assets/fonts/AvQest.ttf" id="4_ghdfr"]
[ext_resource type="PackedScene" uid="uid://cfx8vo87aq1aj" path="res://src/ui/spell_ui/SpellCompRow.tscn" id="5_f7kuw"]

[node name="SpellUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uvawi")
spell_comp_row_prefab = ExtResource("5_f7kuw")

[node name="SpellPanel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 376.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_px7ni")
expand_mode = 3
stretch_mode = 5

[node name="Panel" type="Panel" parent="SpellPanel"]
layout_mode = 0
offset_left = 339.0
offset_top = 494.0
offset_right = 734.0
offset_bottom = 619.0

[node name="Label" type="RichTextLabel" parent="SpellPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 350.0
offset_top = 522.0
offset_right = -1158.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("4_ghdfr")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Failed spell. Press space to cast again."
scroll_active = false

[node name="BackgroundArt" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftScroll" type="TextureRect" parent="BackgroundArt"]
self_modulate = Color(1, 1, 1, 0.756863)
layout_mode = 2
texture = ExtResource("2_00xkd")
expand_mode = 3
stretch_mode = 5

[node name="RightScroll" type="TextureRect" parent="BackgroundArt"]
self_modulate = Color(1, 1, 1, 0.756863)
layout_mode = 2
texture = ExtResource("3_rvh61")
expand_mode = 3
stretch_mode = 5

[node name="PrefixLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 56.0
offset_top = 8.0
offset_right = 276.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.760784, 0.737255, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("4_ghdfr")
theme_override_font_sizes/font_size = 56
text = "Prefixes"
horizontal_alignment = 1

[node name="PrefixContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 96.0
offset_right = 304.0
offset_bottom = -16.0
grow_vertical = 2

[node name="PrefixRow" parent="PrefixContainer" instance=ExtResource("5_f7kuw")]
layout_mode = 2

[node name="PrefixRow2" parent="PrefixContainer" instance=ExtResource("5_f7kuw")]
layout_mode = 2

[node name="SpellLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -272.0
offset_top = 24.0
offset_right = -52.0
offset_bottom = 96.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.0980392, 0.760784, 0.0431373, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("4_ghdfr")
theme_override_font_sizes/font_size = 56
text = "Spells"
horizontal_alignment = 1

[node name="SpellContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = 112.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 2

[node name="PrefixRow" parent="SpellContainer" instance=ExtResource("5_f7kuw")]
layout_mode = 2
